--- a/Code/Website/views/partials/user-management.html
+++ b/Code/Website/views/partials/user-management.html
@@ -38,6 +38,13 @@
 				<input class='fields {{display_mode}}' class='fields {{display_mode}}' type='password' ng-model='password' pattern='^[a-zA-Z0-9]{8,}$' title='Must contain at least 8 or more characters. Only alphanumeric characters allowed.' required>
 				<br>
 				<br>
+				<label>Shift</label><br>
+				<div ng-init='getActiveShifts()'>
+					<select ng-model="selectedShift" ng-options= "x.shift_name for x in shifts" required>
+						<option value="">--Select Shift--</option>
+					</select>
+				</div>
+				<br>
 				<label>Role</label><br>
 				<select class='fields {{display_mode}}' ng-model='role'>
 					<option value='Officer'>Officer</option>
@@ -82,6 +89,7 @@
 							<th>Last Name</th>
 							<th>Username</th>
 							<th>Role</th>
+							<th>Shift</th>
 							<th class="text-center">Edit</th>
 						</tr>
 					</thead>
@@ -92,7 +100,8 @@
 							<td>{{o.lastName}}</td>
 							<td>{{o.username}}</td>
 							<td>{{o.role}}</td>
-							<td class='text-center'><button class="btn-default" ng-click='editUser(o.id, o.firstName, o.lastName, o.username, o.role)'><span class="glyphicon glyphicon-edit"></span> Edit</button></td>
+							<td>{{o.shift_name}}</td>
+							<td class='text-center'><button class="btn-default" ng-click='editUser(o.id, o.firstName, o.lastName, o.username, o.role, o.shift_name)'><span class="glyphicon glyphicon-edit"></span> Edit</button></td>
 						</tr>
 					</tbody>
 				</table>
@@ -126,6 +135,14 @@
 						<div class="form-group">
 							<label>Username</label>
 							<input type="text" class="form-control fields {{display_mode_modal}}" ng-model='updateUsername' required>
+						</div>
+						<div class="form-group">
+							<label>Shift</label><br>
+							<input type="text" class="form-control fields {{display_mode_modal}}" ng-model='oldShift' ng-readonly="true" required />
+							<div ng-init='getActiveShifts()'>
+								<select class="form-control fields {{display_mode_modal}}"  ng-model="updateShift" ng-options= "x.shift_name for x in shifts" required>
+								</select>
+							</div>
 						</div>
 						<div class="form-group">
 							<label>Role</label>
