--- a/Code/Website/views/admin-profile.html
+++ b/Code/Website/views/admin-profile.html
@@ -36,6 +36,8 @@
   <script src='../app/controllers/admin-ctrl.js' type='text/javascript'></script>
   <script src='../app/services/data-service.js' type='text/javascript'></script>
   <script src="../app/vendor/ng-flow/dist/ng-flow-standalone.min.js"></script>
+  <script src="../app/vendor/angularjs-dropdown-multiselect.js"></script>
+  
 
     <script>
   $( function() {
