--- a/Code/Website/views/officer-profile.html
+++ b/Code/Website/views/officer-profile.html
@@ -36,6 +36,7 @@
   <script src='../app/controllers/officer-ctrl.js' type='text/javascript'></script>
   <script src='../app/services/data-service.js' type='text/javascript'></script>
   <script src="../app/vendor/ng-flow/dist/ng-flow-standalone.min.js"></script>
+  <script src="../app/vendor/angularjs-dropdown-multiselect.js"></script>
 
 </head>
 <body class = "{{display_mode}}" ng-controller='officerCtrl' ng-init='getSiteNames()' >
