--- a/Code/Website/views/supervisor-profile.html
+++ b/Code/Website/views/supervisor-profile.html
@@ -45,6 +45,7 @@
   <script src='../app/controllers/supervisor-ctrl.js' type='text/javascript'></script>
   <script src='../app/services/data-service.js' type='text/javascript'></script>
   <script src="../app/vendor/ng-flow/dist/ng-flow-standalone.min.js"></script>
+  <script src="../app/vendor/angularjs-dropdown-multiselect.js"></script>
 
   <style>
     .grid {
