--- a/Code/Website/views/partials/category-management.html
+++ b/Code/Website/views/partials/category-management.html
@@ -17,7 +17,7 @@
 				<div>
 				    <div ng-init='populateMultiShifts()' ng-dropdown-multiselect=""
 				        options="shiftData" 
-				        selected-model="shiftModel" 
+				        selected-model="shiftModel"
 				        extra-settings="shiftSettings">
 				    </div>
 				</div>
@@ -51,7 +51,7 @@
 					<tr ng-repeat='c in categories|filter:search'>
 						<td class='text-center'>{{$index + 1}}</td>
 						<td>{{c.name}}</td>
-						<td>{{c.shift_name}}</td>
+						<td>{{c.shifts}}</td>
 						<td class='text-center'><button class="btn-default" ng-click='editCategory(c.id, c.name)'><span class="glyphicon glyphicon-edit"></span> Edit</button></td>
 					</tr>
 				</tbody>
@@ -77,6 +77,15 @@
 						<div class="form-group">
 							<label>Name</label>
 							<input type="text" class="form-control fields {{display_mode_modal}}" ng-model='updateName' required>
+						</div>
+						<br>
+						<label>New Shift Visibility</label><br>
+						<div>
+						    <div ng-init='populateMultiShifts()' ng-dropdown-multiselect=""
+						        options="shiftData" 
+						        selected-model="shiftModel"
+						        extra-settings="shiftSettings">
+						    </div>
 						</div>
 						<br>
 						<!-- TO DO: Don't show successful update message when no changes were made to the user -->
