--- a/Code/Website/views/supervisor-profile.html
+++ b/Code/Website/views/supervisor-profile.html
@@ -31,10 +31,14 @@
   <script src="../app/vendor/ui-grid.min.js"></script>
 
   <!--PDF-MAKE-CDN-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.31/pdfmake.js"></script>
+  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.31/pdfmake.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.31/pdfmake.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.31/pdfmake.min.js.map"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.31/vfs_fonts.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.31/vfs_fonts.js"></script>-->
+  <script src="../app/vendor/pdfmake.js"></script>
+  <script src="../app/vendor/pdfmake.min.js"></script>
+  <script src="../app/vendor/pdfmake.min.js.map"></script>
+  <script src="../app/vendor/vfs_fonts.js"></script>
 
   <script src='../app/vendor/angular-route.min.js'></script>
   <script src='../app/vendor/jquery.table2excel.js'></script>
