Updated query to get authoried categories to inlcude logic for categories that have access to ALL shifts

--- a/Code/Website/views/partials/manage-documents.html
+++ b/Code/Website/views/partials/manage-documents.html
@@ -162,7 +162,7 @@
 							<th ng-click="sortTable('date')">Upload Date</th>
 							<th ng-click="sortTable('pinned')">Pinned</th>
 							<th ng-click="sortTable('uploadedBy')">Uploaded By</th>
-							<th ng-click="sortTable('archived')">Archived</th>
+							<th ng-click="sortTable('archived')">Manual Archived</th>
 							<th class="text-center">Edit</th>
 						</tr>
 					</thead>
