--- a/Code/Website/views/admin-profile.html
+++ b/Code/Website/views/admin-profile.html
@@ -15,9 +15,6 @@
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
   <!-- SCRIPTS -->
-  <!-- <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js'></script>
-  <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script> -->
   <script src='../app/vendor/1.12.4.jquery.min.js'></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script src='../app/vendor/3.3.7.bootstrap.min.js'></script>
@@ -37,6 +34,8 @@
   <script src='../app/services/data-service.js' type='text/javascript'></script>
   <script src="../app/vendor/ng-flow/dist/ng-flow-standalone.min.js"></script>
   <script src="../app/vendor/angularjs-dropdown-multiselect.js"></script>
+  <script src="../app/vendor/angular-idle.min.js"></script>
+
   
 
     <script>
@@ -134,5 +133,6 @@
       </div>
     </div>
   </div>
+
 </body>
 </html>
