--- a/Code/Website/views/index.html
+++ b/Code/Website/views/index.html
@@ -31,6 +31,7 @@
   <script src='../app/services/data-service.js' type='text/javascript'></script>
   <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'></script>
   <script src="../app/vendor/angularjs-dropdown-multiselect.js"></script>
+  <script src="../app/vendor/angular-idle.min.js"></script>
 
 </head>
 
