--- a/Code/Website/views/supervisor-profile.html
+++ b/Code/Website/views/supervisor-profile.html
@@ -50,6 +50,9 @@
   <script src='../app/services/data-service.js' type='text/javascript'></script>
   <script src="../app/vendor/ng-flow/dist/ng-flow-standalone.min.js"></script>
   <script src="../app/vendor/angularjs-dropdown-multiselect.js"></script>
+  <script src="../app/vendor/angular-idle.min.js"></script>
+    <script src='http://angular-ui.github.io/bootstrap/'></script>
+
 
   <style>
     .grid {
