Added implementation for task 331 to reposition watch order map based on langitude and longitude specified in site settings

--- a/Code/Website/views/partials/watch-orders.html
+++ b/Code/Website/views/partials/watch-orders.html
@@ -29,6 +29,7 @@
     </div>
   </section>
 </div>
+</div>
 
 <div style="margin: auto; width: 90%;">
   <div class='panel panel-primary {{display_mode}}'>
