--- a/Code/Website/views/partials/site-settings.html
+++ b/Code/Website/views/partials/site-settings.html
@@ -86,12 +86,12 @@
       <form ng-submit='updateLatLang(latitude,longitude)'>
         <label>Latitude</label>
         <br>
-        <input class='col-xs-6 fields {{display_mode}}' type='number' ng-model='latitude' required>
+        <input class='col-xs-6 fields {{display_mode}}' type='text' ng-model='latitude' required>
         <br>
         <br>
         <label>Longitude</label>
         <br>
-        <input class='col-xs-6 fields {{display_mode}}' type='number' ng-model='longitude' required>
+        <input class='col-xs-6 fields {{display_mode}}' type='text' ng-model='longitude' required>
         <br>
         <br>
         <button type="submit" class="btn btn-success">Update</button>
@@ -102,17 +102,17 @@
 
   <!-- View Site Settings Panel -->
   <div class='panel panel-primary {{display_mode}}'>
-    <div class='panel-heading'>View Current Settings</div>
+    <div class='panel-heading'>Current Site Settings</div>
     <div class='panel-body'>
       <div>
         <table class="table table-striped {{display_mode}} table-hover" style='margin:auto; width:100%'>
           <form class="form-inline"></form>
           <thead>
             <tr>
-              <th>Application Name Name</th>
+              <th>Application Name</th>
               <th>Department Name</th>
-              <th>Session Timeout</th>
-              <th>Map Lat/Long</th>
+              <th>Session Timeout (min)</th>
+              <th>Map Default Lat/Long</th>
             </tr>
           </thead>
           <tbody>
@@ -120,7 +120,7 @@
               <td><div ng-init='getSiteNames()'>{{app_name}}</div></td>
               <td><div ng-init='getSiteNames()'>{{dept_name}}</div></td>
               <td><div ng-init='getTimeoutMinutes()'></div>{{timeout_minutes}}</td>
-              <td>LatLang</td>
+              <td><div ng-init='getLatLong()'></div>{{lat}} / {{lon}}</td>
             </tr>
           </tbody>
         </table>
