--- a/Code/Website/views/partials/view-categories.html
+++ b/Code/Website/views/partials/view-categories.html
@@ -1,3 +1,4 @@
+<div ng-init='initMap();'></div>
 <div class = "{{display_mode}}" ng-init='getAuthorizedCategories()'  >
   <div class="container" >
     <h3>DOCUMENT CATEGORIES</h3>
