Implemented session timeout based on site settings

--- a/Code/Website/views/style/officer.css
+++ b/Code/Website/views/style/officer.css
@@ -128,6 +128,17 @@
     font-size: 13px;
   }
 
+  .modal-header, h4, .close-btn {
+    background-color: #337AB7;
+    color:white !important;
+    text-align: center;
+    font-size: 30px;
+  }
+  
+  .modal-footer {
+      background-color: #f9f9f9;
+  }
+
   .Pending{
     border-color: #ff4444;
     background: #ff4444;
