--- a/Code/Website/views/supervisor-profile.html
+++ b/Code/Website/views/supervisor-profile.html
@@ -51,7 +51,7 @@
   <script src="../app/vendor/ng-flow/dist/ng-flow-standalone.min.js"></script>
   <script src="../app/vendor/angularjs-dropdown-multiselect.js"></script>
   <script src="../app/vendor/angular-idle.min.js"></script>
-    <script src='http://angular-ui.github.io/bootstrap/'></script>
+  <script src='http://angular-ui.github.io/bootstrap/'></script>
 
 
   <style>
@@ -68,6 +68,7 @@
   <!-- Vertical Navigation -->
   <nav class='navbar navbar-default'>
     <div class='container-fluid'>
+      <div ng-init='timeoutInit()'></div>
       <div class='navbar-header'>
         <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='#myNavbar'>
           <span class='icon-bar'></span>
