--- a/Code/Website/views/admin-profile.html
+++ b/Code/Website/views/admin-profile.html
@@ -79,6 +79,7 @@
   <!-- Vertical Navigation -->
   <nav class='navbar navbar-default'>
     <div class='container-fluid'>
+      <div ng-init='timeoutInit()'></div>
       <div class='navbar-header'>
         <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='#myNavbar'>
           <span class='icon-bar'></span>
