--- a/Code/Website/views/officer-profile.html
+++ b/Code/Website/views/officer-profile.html
@@ -46,6 +46,7 @@
   <!-- Vertical Navigation -->
   <nav class='navbar navbar-default'>
     <div class='container-fluid'>
+      <div ng-init='timeoutInit()'></div>
       <div class='navbar-header'>
         <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='#myNavbar'>
           <span class='icon-bar'></span>
@@ -78,6 +79,5 @@
   </nav>
   <!-- content will change according to route -->
   <section ng-view></section>
-
 </body>
 </html>
