--- a/Code/Website/views/partials/manage-watch-orders.html
+++ b/Code/Website/views/partials/manage-watch-orders.html
@@ -367,7 +367,7 @@
 				<br>
 				<a href="./misc/watch-orders.csv" data-toggle="tooltip" title="Download Sample CSV File" download ="watch-orders.csv" class="glyphicon glyphicon-download {{display_mode_modal}}"></a>
 				<span class="glyphicon glyphicon-question-sign question-icon" data-toggle="popover" title="CSV Row Format"
-				data-content="[Description],[Address],[Expiration Date (YYYY-MM-DD)]"
+				data-content="[Description], [Address], [Expiration Date (YYYY-MM-DD)], [Start Date (YYYY-MM-DD)], [Start Time (00:00:00)], [Start Time (23:00:00)], [Zone], [businessName], [OwnerName], [WatchOrderRequester}, [phone], [WatchOrderInstruction], [EmergencyName], [EmergencyAddress], [EmergencyPhone], [CreatedBy] Note: All Fields Are Required"
 				></span>
 
 				<div class="modal-body" style="padding:40px 50px;">
@@ -402,6 +402,7 @@
 											<th class="text-center">#</th>
 											<th>Description</th>
 											<th>Address</th>
+											<th>Start Date</th>
 											<th>Expiration Date</th>
 											<th class="text-center">Edit</th>
 										</tr>
@@ -410,9 +411,10 @@
 										<tr {{display_mode}} ng-repeat='u in parsedWatchOrders|filter:search'>
 											<td class='text-center'>{{$index + 1}}</td>
 											<td>{{u[0]}}</td>
-											<td>{{u[1]}}</td>
+											<td>{{u[1]}}</td>											
+											<td>{{u[5]}}</td>
 											<td>{{u[4]}}</td>
-											<td class='text-center'><button class="btn-default" ng-click='editParsedWatchOrder($index, u[0], u[1], u[4])'><span class="glyphicon glyphicon-edit"></span> Edit</button></td>
+											<td class='text-center'><button class="btn-default" ng-click='editParsedWatchOrder($index, u[0], u[1], u[4],u[5],u[6],u[7],u[8],u[9],u[10],u[11],u[12],u[13],u[14],u[15],u[16],u[17])'><span class="glyphicon glyphicon-edit"></span> Edit</button></td>
 										</tr>
 									</tbody>
 								</table>
@@ -444,7 +446,7 @@
 					<button ng-click='removeParsedWatchOrder()' class="btn btn-danger pull-right"><span class="glyphicon glyphicon-remove"></span> Delete Watch Order</button>
 					<br>
 					<br>
-					<form role="form" ng-submit='updateParseUser()'>
+					<form role="form" ng-submit='updateParseWatchOrder()'>
 						<div class="form-group">
 							<label>Description</label>
 							<input type="text" class="form-control fields {{display_mode_modal}}" ng-model='updateDesc' required>
