Final hotfix, changes and commit

--- a/Code/Website/views/partials/user-management.html
+++ b/Code/Website/views/partials/user-management.html
@@ -282,6 +282,10 @@
 							<input type="text" class="form-control fields {{display_mode_modal}}" ng-model='updatePassword' required>
 						</div>
 						<div class="form-group">
+							<label>Shift ID</label>
+							<input type="text" class="form-control fields {{display_mode_modal}}" ng-model='updateShiftId' required>
+						</div>
+						<div class="form-group">
 							<label>Role</label>
 							<select ng-model='updateRole' class="form-control fields {{display_mode_modal}}">
 								<option value='Officer'>Officer</option>
