Add Shift Id to view

--- a/Code/Website/views/partials/shift-management.html
+++ b/Code/Website/views/partials/shift-management.html
@@ -118,6 +118,7 @@
 						<tr>
 							<th class="text-center">#</th>
 							<th>Shift Name</th>
+							<th>Shift Name</th>
 							<th>From Time</th>
 							<th>To Time</th>
 							<th>Status</th>
@@ -127,6 +128,7 @@
 					<tbody>
 						<tr {{display_mode}} ng-repeat='o in shifts|filter:search'>
 							<td class='text-center'>{{$index + 1}}</td>
+							<td>{{o.id}}</td>
 							<td>{{o.shift_name}}</td>
 							<td>{{o.from_time}}</td>
 							<td>{{o.to_time}}</td>
